# RTS-Chess

./: .editorconfig  .gitignore  Build.bat  Build.sh  CMakeLists.txt  README.md  build.bat  build.sh  description.txt
.github/workflows/: build_linux.yml  ci.yml
client/headers/: MessageHandler.hpp  RTS-Chess-MainLoop.hpp  SDLFontManager.hpp  SDLTextureManager.hpp  TextBox.hpp
client/headers/views/: ConnectView.hpp  GameView.hpp  LobbyView.hpp  RoomView.hpp  View.hpp
client/src/: MessageHandler.cpp  RTS-Chess-MainLoop.cpp  RTS-Chess-client.cpp  SDLFontManager.cpp  SDLTextureManager.cpp  TextBox.cpp
client/src/views/: ConnectView.cpp  GameView.cpp  LobbyView.cpp  RoomView.cpp
release/: README.md
server/headers/: MessageHandler.hpp
server/src/: MessageHandler.cpp  RTS-Chess-server.cpp
shared/headers/: Board.hpp  ConnectionManager.hpp  Move.hpp  PlatformManager.hpp  Room.hpp  Structures.hpp  User.hpp
shared/headers/pieces/: Bishop.hpp  King.hpp  Knight.hpp  Pawn.hpp  Piece.hpp  Queen.hpp  Rook.hpp
shared/src/: Board.cpp  ConnectionManager.cpp  Move.cpp  Room.cpp  User.cpp
shared/src/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
